--- a/lovelace/includes_garden/item_activity_history_line.yaml
+++ b/lovelace/includes_garden/item_activity_history_line.yaml
@@ -19,12 +19,13 @@ styles:
     - display: >
         [[[
           var zone = '{{ zone }}';
-          zone = zone.substring(4, 5) + '.0';
-          var number_of_zones = states['input_number.irrigation_number_of_zones'].state;
+          zone = Number(zone.substring(4, 5));
+          var number_of_zones = Number(states['input_number.irrigation_number_of_zones'].state);
           var show_history = states['input_boolean.irrigation_show_status_history'].state;
           if (zone > number_of_zones ||
               show_history == 'off' )
             return 'none';
+          else return null;
         ]]]
     - font-size: 14px
     - font-family: Oswald
