--- a/lovelace/includes_garden/item_activity_previous_line.yaml
+++ b/lovelace/includes_garden/item_activity_previous_line.yaml
@@ -35,12 +35,13 @@ styles:
     - display: >
         [[[
           var zone = '{{ zone }}';
-          zone = zone.substring(4, 5) + '.0';
-          var number_of_zones = states['input_number.irrigation_number_of_zones'].state;
+          zone = Number(zone.substring(4, 5));
+          var number_of_zones = Number(states['input_number.irrigation_number_of_zones'].state);
           var show_details = states['input_boolean.irrigation_show_last_run_details'].state;
           if (zone > number_of_zones ||
               show_details == 'off')
             return 'none';
+          else return null;
         ]]]
     - font-size: 14px
     - font-family: Oswald
