--- a/lovelace/includes_garden/section_settings_general.yaml
+++ b/lovelace/includes_garden/section_settings_general.yaml
@@ -175,6 +175,7 @@ card:
             - item_settings_line.yaml
             - entity: input_number.irrigation_weather_adjusted_minimum_duration_in_seconds
               name: Minimum number of seconds to run a zone
+              secondary_info: When using weather adjustments
               margin_top: -0.5em
 
         #=== Maximum duration when using weather adjustments
@@ -182,6 +183,7 @@ card:
             - item_settings_line.yaml
             - entity: input_number.irrigation_weather_adjusted_maximum_duration_in_minutes
               name: Maximum number of minutes to run a zone
+              secondary_info: When using weather adjustments
               margin_top: -0.5em
 
         - type: divider
